--- a/src/Components/Card.module.css
+++ b/src/Components/Card.module.css
@@ -25,3 +25,19 @@
 .card_title {
     margin-bottom: 20px;
 }
+
+.btn {
+    background-color: #501c50;
+    font-family: "Nunito", sans-serif;
+    padding: 8px 15px;
+    color: white;
+    border-radius: 10px;
+    font-weight: 500;
+    cursor: pointer;
+    border: none;
+}
+
+.btn:hover {
+    transition: transform 0.3s ease;
+    transform: scale(1.2);
+}
